k8s/deployment-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plagiarismguard-app
  namespace: plagiarismguard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plagiarismguard-app
  template:
    metadata:
      labels:
        app: plagiarismguard-app
    spec:
      containers:
        - name: app
          image: plagiarismguard-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: app-data
              mountPath: /app/data
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 40
            periodSeconds: 20
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
      volumes:
        - name: app-data
          persistentVolumeClaim:
            claimName: plagiarismguard-data-pvc
