k8s/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: plagiarismguard-app-service
  namespace: plagiarismguard
spec:
  selector:
    app: plagiarismguard-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
