k8s/service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: plagiarismguard-nginx-service
  namespace: plagiarismguard
spec:
  selector:
    app: plagiarismguard-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
