k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plagiarismguard-ingress
  namespace: plagiarismguard
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  rules:
    - host: guard-main.by
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plagiarismguard-nginx-service
                port:
                  number: 80
